@@ -21,10 +21,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 import static br.com.livelo.orderflight.exception.enuns.OrderFlightErrorType.ORDER_FLIGHT_ORDER_STATUS_INVALID_BUSINESS_ERROR;
@@ -53,17 +50,16 @@ class ReservationServiceTest {
     @Test
     void shouldCreateReservation() {
         var transactionId = "123";
-        var partnerReservationResponse = buildPartnerReservationResponse("LIVPNR-1007", "ci123");
+        var partnerReservationResponse = buildPartnerReservationResponse("LIVPNR-1006", "ci123");
         var orderMock = mock(OrderEntity.class);
         var requestMock = mock(ReservationRequest.class);
+        var ids = requestMock.getItems()
+                .stream()
+                .map(ReservationItem::getCommerceItemId)
+                .collect(Collectors.toList());
+        ids.add(requestMock.getCommerceOrderId());
         when(requestMock.getCommerceOrderId()).thenReturn("QWERT");
-        when(orderService.findByCommerceOrderIdOrItemsCommerceItemsId(
-                requestMock.getCommerceOrderId(),
-                requestMock.getItems()
-                        .stream()
-                        .map(ReservationItem::getCommerceItemId)
-                        .collect(Collectors.toSet())))
-                .thenReturn(Optional.empty());
+        when(orderService.findByCommerceOrderIdIn(any())).thenReturn(Optional.empty());
 
         when(connectorPartnersProxy.createReserve(any(), anyString(), anyString())).thenReturn(partnerReservationResponse);
         when(orderService.save(any())).thenReturn(orderMock);
@@ -81,31 +77,115 @@ class ReservationServiceTest {
         var type = "type_flight";
         var segmentsPartnersId = "asdf";
         var orderMock = mock(OrderEntity.class);
+
         var request = this.buildResevationRequest(
                 List.of(this.buildReservationItem(transactionId, type, "cvc_flight"),
                         this.buildReservationItem(transactionId, "type_flight_tax", "cvc_flight_tax")
                 ),
                 List.of(segmentsPartnersId, segmentsPartnersId)
         );
-        var connectorReservationResponse = buildPartnerReservationResponse("LIVPNR-1007", segmentsPartnersId);
+        var connectorReservationResponse = buildPartnerReservationResponse("LIVPNR-1006", segmentsPartnersId);
 
         when(connectorPartnersProxy.getReservation(any(), any(), any(), any(), anyString())).thenReturn(connectorReservationResponse);
         when(orderService.save(any())).thenReturn(orderMock);
 
 
         var order = this.buildOrderEntity(
-                Set.of(this.buildOrderItem(id, transactionId, segmentsPartnersId, "cvc_flight"), this.buildOrderItem(2L, transactionId, segmentsPartnersId, "cvc_flight_tax")),
+                request.getCommerceOrderId(),
+                Set.of(this.buildOrderItem(id, transactionId, segmentsPartnersId, "CVCFLIGHT"), this.buildOrderItem(2L, transactionId, segmentsPartnersId, "CVCFLIGHTTAX")),
                 transactionId,
                 "LIVPNR-1006"
         );
 
-        when(orderService.findByCommerceOrderIdOrItemsCommerceItemsId(
+        var ids = request.getItems()
+                .stream()
+                .map(ReservationItem::getCommerceItemId)
+                .collect(Collectors.toList());
+        ids.add(request.getCommerceOrderId());
+
+        when(orderService.findByCommerceOrderIdIn(ids)).thenReturn(Optional.of(order));
+        when(pricingProxy.calculate(any())).thenReturn(buildPricingCalculateResponse());
+        var response = this.reservationService.createOrder(request, transactionId, "123", "WEB", "price", "");
+        assertNotNull(response);
+    }
+
+    @Test
+    void shouldCreateOrder_WhenReservationExistsInPartnerAndItemIsFlight() {
+        var transactionId = "123";
+        var id = 1L;
+        var type = "type_flight";
+        var segmentsPartnersId = "asdf";
+        var orderMock = mock(OrderEntity.class);
+
+        when(orderService.isFlightItem(any())).thenReturn(true);
+        var request = this.buildResevationRequest(
+                List.of(this.buildReservationItem(transactionId, type, "cvc_flight"),
+                        this.buildReservationItem(transactionId, "type_flight_tax", "cvc_flight_tax")
+                ),
+                List.of(segmentsPartnersId, segmentsPartnersId)
+        );
+        var connectorReservationResponse = buildPartnerReservationResponse("LIVPNR-1006", segmentsPartnersId);
+
+        when(connectorPartnersProxy.getReservation(any(), any(), any(), any(), anyString())).thenReturn(connectorReservationResponse);
+        when(orderService.save(any())).thenReturn(orderMock);
+
+
+        var order = this.buildOrderEntity(
                 request.getCommerceOrderId(),
-                request.getItems()
-                        .stream()
-                        .map(ReservationItem::getCommerceItemId)
-                        .collect(Collectors.toSet())))
-                .thenReturn(Optional.of(order));
+                Set.of(this.buildOrderItem(id, transactionId, segmentsPartnersId, "CVCFLIGHT"), this.buildOrderItem(2L, transactionId, segmentsPartnersId, "CVCFLIGHTTAX")),
+                transactionId,
+                "LIVPNR-1006"
+        );
+
+        var ids = request.getItems()
+                .stream()
+                .map(ReservationItem::getCommerceItemId)
+                .collect(Collectors.toList());
+        ids.add(request.getCommerceOrderId());
+
+        when(orderService.findByCommerceOrderIdIn(ids)).thenReturn(Optional.of(order));
+        when(pricingProxy.calculate(any())).thenReturn(buildPricingCalculateResponse());
+        var response = this.reservationService.createOrder(request, transactionId, "123", "WEB", "price", "");
+        assertNotNull(response);
+    }
+
+    @Test
+    void shouldCreateOrder_WhenReservationExistsInPartnerAndPriceModalitiesIsNull() {
+        var transactionId = "123";
+        var id = 1L;
+        var type = "type_flight";
+        var segmentsPartnersId = "asdf";
+        var orderMock = mock(OrderEntity.class);
+
+        when(orderService.isFlightItem(any())).thenReturn(true);
+        var request = this.buildResevationRequest(
+                List.of(this.buildReservationItem(transactionId, type, "cvc_flight"),
+                        this.buildReservationItem(transactionId, "type_flight_tax", "cvc_flight_tax")
+                ),
+                List.of(segmentsPartnersId, segmentsPartnersId)
+        );
+        var connectorReservationResponse = buildPartnerReservationResponse("LIVPNR-1006", segmentsPartnersId);
+
+        when(connectorPartnersProxy.getReservation(any(), any(), any(), any(), anyString())).thenReturn(connectorReservationResponse);
+        when(orderService.save(any())).thenReturn(orderMock);
+
+
+        var order = this.buildOrderEntity(
+                request.getCommerceOrderId(),
+                Set.of(this.buildOrderItem(id, transactionId, segmentsPartnersId, "CVCFLIGHT"), this.buildOrderItem(2L, transactionId, segmentsPartnersId, "CVCFLIGHTTAX")),
+                transactionId,
+                "LIVPNR-1006"
+        );
+
+        order.getItems().forEach(item -> item.getPrice().setPricesModalities(null));
+
+        var ids = request.getItems()
+                .stream()
+                .map(ReservationItem::getCommerceItemId)
+                .collect(Collectors.toList());
+        ids.add(request.getCommerceOrderId());
+
+        when(orderService.findByCommerceOrderIdIn(ids)).thenReturn(Optional.of(order));
         when(pricingProxy.calculate(any())).thenReturn(buildPricingCalculateResponse());
         var response = this.reservationService.createOrder(request, transactionId, "123", "WEB", "price", "");
         assertNotNull(response);
@@ -129,18 +209,19 @@ class ReservationServiceTest {
 
 
         var order = this.buildOrderEntity(
-                Set.of(this.buildOrderItem(id, transactionId, segmentsPartnersId, "cvc_flight"), this.buildOrderItem(2L, transactionId, segmentsPartnersId, "cvc_flight_tax")),
+                request.getCommerceOrderId(),
+                Set.of(this.buildOrderItem(id, transactionId, segmentsPartnersId, "CVCFLIGH"), this.buildOrderItem(2L, transactionId, segmentsPartnersId, "CVCFLIGHTTAX")),
                 transactionId,
                 "LIVPNR-1006"
         );
 
-        when(orderService.findByCommerceOrderIdOrItemsCommerceItemsId(
-                request.getCommerceOrderId(),
-                request.getItems()
-                        .stream()
-                        .map(ReservationItem::getCommerceItemId)
-                        .collect(Collectors.toSet())))
-                .thenReturn(Optional.of(order));
+        var ids = request.getItems()
+                .stream()
+                .map(ReservationItem::getCommerceItemId)
+                .collect(Collectors.toList());
+        ids.add(request.getCommerceOrderId());
+
+        when(orderService.findByCommerceOrderIdIn(ids)).thenReturn(Optional.of(order));
         when(orderService.save(any())).thenReturn(order);
         var exception = assertThrows(OrderFlightException.class, () -> this.reservationService.createOrder(request, transactionId, "123", "WEB", "price", ""));
         assertAll(
@@ -164,18 +245,18 @@ class ReservationServiceTest {
 
 
         var order = this.buildOrderEntity(
-                Set.of(this.buildOrderItem(id, transactionId, segmentsPartnersId, "cvc_flight"), this.buildOrderItem(2L, transactionId, segmentsPartnersId, "cvc_flight_tax")),
+                request.getCommerceOrderId(),
+                Set.of(this.buildOrderItem(id, transactionId, segmentsPartnersId, "CVCFLIGHT"), this.buildOrderItem(2L, transactionId, segmentsPartnersId, "CVCFLIGHTTAX")),
                 transactionId,
                 "LIVPNR-9001"
         );
+        var ids = request.getItems()
+                .stream()
+                .map(ReservationItem::getCommerceItemId)
+                .collect(Collectors.toList());
+        ids.add(request.getCommerceOrderId());
 
-        when(orderService.findByCommerceOrderIdOrItemsCommerceItemsId(
-                request.getCommerceOrderId(),
-                request.getItems()
-                        .stream()
-                        .map(ReservationItem::getCommerceItemId)
-                        .collect(Collectors.toSet())))
-                .thenReturn(Optional.of(order));
+        when(orderService.findByCommerceOrderIdIn(ids)).thenReturn(Optional.of(order));
 
         var exception = assertThrows(OrderFlightException.class, () -> this.reservationService.createOrder(request, transactionId, "123", "WEB", "price", ""));
         assertEquals(ORDER_FLIGHT_ORDER_STATUS_INVALID_BUSINESS_ERROR, exception.getOrderFlightErrorType());
@@ -189,18 +270,18 @@ class ReservationServiceTest {
         var type = "type_flight";
         var segmentsPartnersId = "asdf";
 
-        var partnerReservationResponse = buildPartnerReservationResponse("LIVPNR-1007", segmentsPartnersId);
+        var partnerReservationResponse = buildPartnerReservationResponse("LIVPNR-1006", segmentsPartnersId);
         when(pricingProxy.calculate(any())).thenReturn(buildPricingCalculateResponse());
         when(connectorPartnersProxy.createReserve(any(), anyString(), anyString())).thenReturn(partnerReservationResponse);
-        var request = this.buildResevationRequest(List.of(this.buildReservationItem(segmentsPartnersId, type, "cvc_flight")), List.of(segmentsPartnersId, segmentsPartnersId));
-        var order = this.buildOrderEntity(Set.of(this.buildOrderItem(id, commerceItemId, segmentsPartnersId, "cvc_flight")), transactionId, "LIVPNR-1006");
-        when(orderService.findByCommerceOrderIdOrItemsCommerceItemsId(
-                request.getCommerceOrderId(),
-                request.getItems()
-                        .stream()
-                        .map(ReservationItem::getCommerceItemId)
-                        .collect(Collectors.toSet())))
-                .thenReturn(Optional.of(order));
+        var request = this.buildResevationRequest(Collections.singletonList(this.buildReservationItem(segmentsPartnersId, type, "cvc_flight")), List.of(segmentsPartnersId, segmentsPartnersId));
+        var order = this.buildOrderEntity(request.getCommerceOrderId(), Set.of(this.buildOrderItem(id, commerceItemId, segmentsPartnersId, "CVCFLIGHT")), transactionId, "LIVPNR-1006");
+
+        var ids = request.getItems()
+                .stream()
+                .map(ReservationItem::getCommerceItemId)
+                .collect(Collectors.toList());
+        ids.add(request.getCommerceOrderId());
+        when(orderService.findByCommerceOrderIdIn(ids)).thenReturn(Optional.of(order));
         when(orderService.save(any())).thenReturn(order);
         var response = this.reservationService.createOrder(request, transactionId, "123", "WEB", "price", "");
         assertAll(
@@ -215,27 +296,28 @@ class ReservationServiceTest {
         var type = "type_flight";
         var segmentsPartnersId = "asdf";
 
-        var partnerReservationResponse = buildPartnerReservationResponse("LIVPNR-1007", segmentsPartnersId);
+        var partnerReservationResponse = buildPartnerReservationResponse("LIVPNR-1006", segmentsPartnersId);
         when(connectorPartnersProxy.createReserve(any(), anyString(), anyString())).thenReturn(partnerReservationResponse);
         when(pricingProxy.calculate(any())).thenReturn(buildPricingCalculateResponse());
-        var request = this.buildResevationRequest(List.of(this.buildReservationItem(segmentsPartnersId, type, "cvc_flight")), List.of(segmentsPartnersId, segmentsPartnersId));
+        var request = this.buildResevationRequest(Collections.singletonList(this.buildReservationItem(segmentsPartnersId, type, "CVCFLIGHT")), List.of(segmentsPartnersId, segmentsPartnersId));
 
         var order = this.buildOrderEntity(
+                request.getCommerceOrderId(),
                 Set.of(
-                        this.buildOrderItem(1L, transactionId, segmentsPartnersId, "cvc_flight"),
-                        this.buildOrderItem(2L, transactionId, segmentsPartnersId, "cvc_flight_tax")
+                        this.buildOrderItem(1L, transactionId, segmentsPartnersId, "CVCFLIGHT"),
+                        this.buildOrderItem(2L, transactionId, segmentsPartnersId, "CVCFLIGHTTAX")
                 ),
                 transactionId,
                 "LIVPNR-1006"
         );
 
-        when(orderService.findByCommerceOrderIdOrItemsCommerceItemsId(
-                request.getCommerceOrderId(),
-                request.getItems()
-                        .stream()
-                        .map(ReservationItem::getCommerceItemId)
-                        .collect(Collectors.toSet())))
-                .thenReturn(Optional.of(order));
+        var ids = request.getItems()
+                .stream()
+                .map(ReservationItem::getCommerceItemId)
+                .collect(Collectors.toList());
+        ids.add(request.getCommerceOrderId());
+
+        when(orderService.findByCommerceOrderIdIn(ids)).thenReturn(Optional.of(order));
         when(orderService.save(any())).thenReturn(order);
         var response = this.reservationService.createOrder(request, "123", "123", "WEB", "price", "");
 
@@ -256,15 +338,15 @@ class ReservationServiceTest {
 
         var request = this.buildResevationRequest(List.of(this.buildReservationItem(transactionId, type, "cvc_flight")), List.of(segmentsPartnersId, segmentsPartnersId));
 
-        var order = this.buildOrderEntity(Set.of(this.buildOrderItem(id, transactionId, token, "cvc_flight")), transactionId, "LIVPNR-1006");
+        var order = this.buildOrderEntity(request.getCommerceOrderId(), Set.of(this.buildOrderItem(id, transactionId, token, "CVCFLIGHT")), transactionId, "LIVPNR-1006");
 
-        when(orderService.findByCommerceOrderIdOrItemsCommerceItemsId(
-                request.getCommerceOrderId(),
-                request.getItems()
-                        .stream()
-                        .map(ReservationItem::getCommerceItemId)
-                        .collect(Collectors.toSet())))
-                .thenReturn(Optional.of(order));
+       var ids = request.getItems()
+                .stream()
+                .map(ReservationItem::getCommerceItemId)
+                .collect(Collectors.toList());
+       ids.add(request.getCommerceOrderId());
+
+        when(orderService.findByCommerceOrderIdIn(ids)).thenReturn(Optional.of(order));
         var exception = assertThrows(OrderFlightException.class, () -> this.reservationService.createOrder(request, "123", "123", "WEB", "price", ""));
         assertEquals(OrderFlightErrorType.ORDER_FLIGHT_DIVERGENT_TOKEN_BUSINESS_ERROR, exception.getOrderFlightErrorType());
     }
@@ -279,15 +361,15 @@ class ReservationServiceTest {
 
         var request = this.buildResevationRequest(List.of(this.buildReservationItem(transactionId, type, "cvc_flight")), List.of(segmentsPartnersId, segmentsPartnersId, segmentsPartnersId));
 
-        var order = this.buildOrderEntity(Set.of(this.buildOrderItem(id, transactionId, token, "cvc_flight")), transactionId, "LIVPNR-1006");
+        var order = this.buildOrderEntity(request.getCommerceOrderId(), Set.of(this.buildOrderItem(id, transactionId, token, "CVCFLIGHT")), transactionId, "LIVPNR-1006");
 
-        when(orderService.findByCommerceOrderIdOrItemsCommerceItemsId(
-                request.getCommerceOrderId(),
-                request.getItems()
-                        .stream()
-                        .map(ReservationItem::getCommerceItemId)
-                        .collect(Collectors.toSet())))
-                .thenReturn(Optional.of(order));
+        var ids = request.getItems()
+                .stream()
+                .map(ReservationItem::getCommerceItemId)
+                .collect(Collectors.toList());
+        ids.add(request.getCommerceOrderId());
+
+        when(orderService.findByCommerceOrderIdIn(ids)).thenReturn(Optional.of(order));
         var exception = assertThrows(OrderFlightException.class, () -> this.reservationService.createOrder(request, "123", "123", "WEB", "price", ""));
         assertEquals(OrderFlightErrorType.ORDER_FLIGHT_DIVERGENT_TOKEN_BUSINESS_ERROR, exception.getOrderFlightErrorType());
     }
@@ -300,13 +382,13 @@ class ReservationServiceTest {
 
         var request = this.buildResevationRequest(List.of(this.buildReservationItem(transactionId, type, "cvc_flight")), List.of(segmentsPartnersId, segmentsPartnersId));
 
-        when(orderService.findByCommerceOrderIdOrItemsCommerceItemsId(
-                request.getCommerceOrderId(),
-                request.getItems()
-                        .stream()
-                        .map(ReservationItem::getCommerceItemId)
-                        .collect(Collectors.toSet())))
-                .thenThrow(PersistenceException.class);
+        var ids = request.getItems()
+                .stream()
+                .map(ReservationItem::getCommerceItemId)
+                .collect(Collectors.toList());
+        ids.add(request.getCommerceOrderId());
+
+        when(orderService.findByCommerceOrderIdIn(ids)).thenThrow(PersistenceException.class);
         var exception = assertThrows(OrderFlightException.class, () -> this.reservationService.createOrder(request, "123", "123", "WEB", "price", ""));
         assertEquals(OrderFlightErrorType.ORDER_FLIGHT_INTERNAL_ERROR, exception.getOrderFlightErrorType());
     }
@@ -319,8 +401,9 @@ class ReservationServiceTest {
                 .build();
     }
 
-    private OrderEntity buildOrderEntity(Set<OrderItemEntity> orderItems, String transactionId, String statusCode) {
+    private OrderEntity buildOrderEntity(String commerceOrderId, Set<OrderItemEntity> orderItems, String transactionId, String statusCode) {
         return OrderEntity.builder()
+                .commerceOrderId(commerceOrderId)
                 .partnerCode("CVC")
                 .transactionId(transactionId)
                 .currentStatus(OrderStatusEntity.builder().code(statusCode).build())
@@ -357,7 +440,7 @@ class ReservationServiceTest {
                         .changeRules(Set.of(ChangeRuleEntity.builder().build()))
                         .partnerId(token)
                         .build()))
-                .price(OrderItemPriceEntity.builder().partnerAmount(BigDecimal.TEN).build())
+                .price(OrderItemPriceEntity.builder().pricesModalities(Set.of(PriceModalityEntity.builder().priceListId("price").build())).partnerAmount(BigDecimal.TEN).build())
                 .build();
     }
 
